--- a/wiki/cs/Selection_methods.html
+++ b/wiki/cs/Selection_methods.html
@@ -35,7 +35,7 @@
 </p>
 <h3><span id="Opakovan.C3.A9_kliknut.C3.AD"></span><span class="mw-headline" id="Opakovan&eacute;_kliknut&iacute;">Opakovan&eacute; kliknut&iacute;</span></h3>
 <p>Prvn&iacute;m kliknut&iacute;m vyberete d&iacute;l&#269;&iacute; prvek (vrchol, hranu nebo plochu) objektu pod my&scaron;&iacute;. Druh&yacute;m kliknut&iacute;m vyberete cel&yacute; objekt.
-</p><p>T&#345;et&iacute;m kliknut&iacute;m se v&yacute;b&#283;r roz&scaron;&iacute;&#345;&iacute; na jeho kontejnerov&yacute; objekt (<a href="../index.php?title=PartDesign_Body/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PartDesign Body/cs (page does not exist)">PartDesign Body</a>, <a href="../index.php?title=Std_Part/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Part/cs (page does not exist)">Std Part</a> a dal&scaron;&iacute;). Dal&scaron;&iacute;mi kliknut&iacute;mi se v&yacute;b&#283;r roz&scaron;i&#345;uje nahoru po &#345;et&#283;zci kontejner&#367;.
+</p><p>T&#345;et&iacute;m kliknut&iacute;m se v&yacute;b&#283;r roz&scaron;&iacute;&#345;&iacute; na jeho kontejnerov&yacute; objekt (<a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a>, <a href="../Std_Part.html" title="Std Part">Std Part</a> a dal&scaron;&iacute;). Dal&scaron;&iacute;mi kliknut&iacute;mi se v&yacute;b&#283;r roz&scaron;i&#345;uje nahoru po &#345;et&#283;zci kontejner&#367;.
 </p><p><span id="Selection_commands"></span>
 </p>
 <h3><span id="P.C5.99.C3.ADkazy_v.C3.BDb.C4.9Bru"></span><span class="mw-headline" id="P&#345;&iacute;kazy_v&yacute;b&#283;ru">P&#345;&iacute;kazy v&yacute;b&#283;ru</span></h3>
@@ -115,12 +115,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122204613
+Cached time: 20260122204703
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.097 seconds
-Real time usage: 0.337 seconds
+CPU time usage: 0.086 seconds
+Real time usage: 0.269 seconds
 Preprocessor visited node count: 284/1000000
 Post&#8208;expand include size: 9861/2097152 bytes
 Template argument size: 2794/2097152 bytes
@@ -131,19 +131,19 @@ Unstrip post&#8208;expand size: 4592/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  223.337      1 -total
- 82.53%  184.322      3 Template:Code
-  4.88%   10.892      1 Template:Userdocnavi/cs
-  2.33%    5.199      1 Template:Button
-  1.94%    4.327      1 Template:TOCright
-  1.79%    4.001      2 Template:Docnav
-  1.64%    3.659      3 Template:Incode
-  1.58%    3.522      1 Template:Navigation_menu_2
-  1.47%    3.274      1 Template:Caption
-  1.32%    2.943      4 Template:KEY
+100.00%   71.935      1 -total
+ 52.54%   37.798      1 Template:Userdocnavi/cs
+ 39.24%   28.225      1 Template:Navigation_menu_2
+  7.97%    5.736      3 Template:Code
+  6.86%    4.935      1 Template:TOCright
+  6.64%    4.780      1 Template:Button
+  6.15%    4.421      3 Template:Incode
+  4.82%    3.468      2 Template:Docnav
+  4.70%    3.383      1 Template:MenuCommand
+  4.36%    3.138      4 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122204612 and revision id 1742745. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122204702 and revision id 1742747. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
