--- a/wiki/cs/Selection_methods.html
+++ b/wiki/cs/Selection_methods.html
@@ -39,9 +39,9 @@
 </p><p><span id="Selection_commands"></span>
 </p>
 <h3><span id="P.C5.99.C3.ADkazy_v.C3.BDb.C4.9Bru"></span><span class="mw-headline" id="P&#345;&iacute;kazy_v&yacute;b&#283;ru">P&#345;&iacute;kazy v&yacute;b&#283;ru</span></h3>
-<ul><li>V&yacute;b&#283;r v&scaron;ech objekt&#367;: <a href="../index.php?title=Std_SelectAll/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std SelectAll/cs (page does not exist)">Std SelectAll</a>.</li>
-<li>R&aacute;me&#269;ek pro v&yacute;b&#283;r v&iacute;ce hlavn&iacute;ch objekt&#367;: <a href="../index.php?title=Std_BoxSelection/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std BoxSelection/cs (page does not exist)">Std BoxSelection</a>.</li>
-<li>R&aacute;me&#269;ek pro v&yacute;b&#283;r v&iacute;ce ploch: <a href="../index.php?title=Std_BoxElementSelection/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std BoxElementSelection/cs (page does not exist)">Std BoxElementSelection</a> nebo <a href="../index.php?title=Part_BoxSelection/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Part BoxSelection/cs (page does not exist)">Part BoxSelection</a>.</li></ul>
+<ul><li>V&yacute;b&#283;r v&scaron;ech objekt&#367;: <a href="../Std_SelectAll.html" title="Std SelectAll">Std SelectAll</a>.</li>
+<li>R&aacute;me&#269;ek pro v&yacute;b&#283;r v&iacute;ce hlavn&iacute;ch objekt&#367;: <a href="../Std_BoxSelection.html" title="Std BoxSelection">Std BoxSelection</a>.</li>
+<li>R&aacute;me&#269;ek pro v&yacute;b&#283;r v&iacute;ce ploch: <a href="../Std_BoxElementSelection.html" title="Std BoxElementSelection">Std BoxElementSelection</a> nebo <a href="../Part_BoxSelection.html" title="Part BoxSelection">Part BoxSelection</a>.</li></ul>
 <p><span id="Selection_view"></span>
 </p>
 <h2><span id="Zobrazen.C3.AD_v.C3.BDb.C4.9Bru"></span><span class="mw-headline" id="Zobrazen&iacute;_v&yacute;b&#283;ru">Zobrazen&iacute; v&yacute;b&#283;ru</span></h2>
@@ -115,12 +115,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122204703
+Cached time: 20260122204750
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.269 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.245 seconds
 Preprocessor visited node count: 284/1000000
 Post&#8208;expand include size: 9861/2097152 bytes
 Template argument size: 2794/2097152 bytes
@@ -131,19 +131,19 @@ Unstrip post&#8208;expand size: 4592/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   71.935      1 -total
- 52.54%   37.798      1 Template:Userdocnavi/cs
- 39.24%   28.225      1 Template:Navigation_menu_2
-  7.97%    5.736      3 Template:Code
-  6.86%    4.935      1 Template:TOCright
-  6.64%    4.780      1 Template:Button
-  6.15%    4.421      3 Template:Incode
-  4.82%    3.468      2 Template:Docnav
-  4.70%    3.383      1 Template:MenuCommand
-  4.36%    3.138      4 Template:KEY
+100.00%   57.042      1 -total
+ 21.71%   12.382      3 Template:Incode
+ 13.41%    7.648      1 Template:Userdocnavi/cs
+ 11.65%    6.643      4 Template:KEY
+ 10.34%    5.898      2 Template:Docnav
+ 10.17%    5.800      1 Template:TOCright
+  8.60%    4.905      3 Template:Code
+  7.88%    4.495      1 Template:Caption
+  5.57%    3.177      1 Template:Navigation_menu_2
+  3.90%    2.222      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122204702 and revision id 1742747. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122204750 and revision id 1742749. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
