--- a/wiki/cs/Selection_methods.html
+++ b/wiki/cs/Selection_methods.html
@@ -45,7 +45,7 @@
 <p><span id="Selection_view"></span>
 </p>
 <h2><span id="Zobrazen.C3.AD_v.C3.BDb.C4.9Bru"></span><span class="mw-headline" id="Zobrazen&iacute;_v&yacute;b&#283;ru">Zobrazen&iacute; v&yacute;b&#283;ru</span></h2>
-<p><a href="../index.php?title=Selection_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection view/cs (page does not exist)">Zobrazen&iacute; v&yacute;b&#283;ru</a> zobrazuje n&aacute;zvy vybran&yacute;ch objekt&#367;, v&#269;etn&#283; jejich &uacute;pln&eacute;ho n&aacute;zvu v r&aacute;mci objektu, nap&#345;&iacute;klad <code>Unnamed#Body.Box001.Face17</code>. 
+<p><a href="../Selection_view.html" class="mw-redirect" title="Selection view">Zobrazen&iacute; v&yacute;b&#283;ru</a> zobrazuje n&aacute;zvy vybran&yacute;ch objekt&#367;, v&#269;etn&#283; jejich &uacute;pln&eacute;ho n&aacute;zvu v r&aacute;mci objektu, nap&#345;&iacute;klad <code>Unnamed#Body.Box001.Face17</code>. 
 </p><p>Umo&#382;&#328;uje tak&eacute; prov&aacute;d&#283;t n&#283;kter&eacute; akce, jako je <a href="../index.php?title=Std_ViewFitSelection/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std ViewFitSelection/cs (page does not exist)">Std ViewFitSelection</a> a odes&iacute;lat objekt do <a href="../index.php?title=Python_console/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Python console/cs (page does not exist)">Konzoly Pythonu</a>.
 </p><p><span id="Object_export"></span>
 </p>
@@ -115,12 +115,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122204750
+Cached time: 20260122204805
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.245 seconds
+CPU time usage: 0.075 seconds
+Real time usage: 0.159 seconds
 Preprocessor visited node count: 284/1000000
 Post&#8208;expand include size: 9861/2097152 bytes
 Template argument size: 2794/2097152 bytes
@@ -131,19 +131,19 @@ Unstrip post&#8208;expand size: 4592/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.042      1 -total
- 21.71%   12.382      3 Template:Incode
- 13.41%    7.648      1 Template:Userdocnavi/cs
- 11.65%    6.643      4 Template:KEY
- 10.34%    5.898      2 Template:Docnav
- 10.17%    5.800      1 Template:TOCright
-  8.60%    4.905      3 Template:Code
-  7.88%    4.495      1 Template:Caption
-  5.57%    3.177      1 Template:Navigation_menu_2
-  3.90%    2.222      1 Template:MenuCommand
+100.00%   40.497      1 -total
+ 27.52%   11.143      1 Template:Userdocnavi/cs
+ 12.87%    5.213      1 Template:Caption
+ 12.62%    5.110      3 Template:Code
+ 11.60%    4.697      1 Template:TOCright
+ 11.26%    4.559      1 Template:Navigation_menu_2
+  9.19%    3.722      2 Template:Docnav
+  6.59%    2.671      3 Template:Incode
+  6.11%    2.476      1 Template:MenuCommand
+  6.01%    2.434      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122204750 and revision id 1742749. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122204805 and revision id 1742751. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
