--- a/wiki/cs/Selection_methods.html
+++ b/wiki/cs/Selection_methods.html
@@ -46,7 +46,7 @@
 </p>
 <h2><span id="Zobrazen.C3.AD_v.C3.BDb.C4.9Bru"></span><span class="mw-headline" id="Zobrazen&iacute;_v&yacute;b&#283;ru">Zobrazen&iacute; v&yacute;b&#283;ru</span></h2>
 <p><a href="../Selection_view.html" class="mw-redirect" title="Selection view">Zobrazen&iacute; v&yacute;b&#283;ru</a> zobrazuje n&aacute;zvy vybran&yacute;ch objekt&#367;, v&#269;etn&#283; jejich &uacute;pln&eacute;ho n&aacute;zvu v r&aacute;mci objektu, nap&#345;&iacute;klad <code>Unnamed#Body.Box001.Face17</code>. 
-</p><p>Umo&#382;&#328;uje tak&eacute; prov&aacute;d&#283;t n&#283;kter&eacute; akce, jako je <a href="../index.php?title=Std_ViewFitSelection/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std ViewFitSelection/cs (page does not exist)">Std ViewFitSelection</a> a odes&iacute;lat objekt do <a href="../index.php?title=Python_console/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Python console/cs (page does not exist)">Konzoly Pythonu</a>.
+</p><p>Umo&#382;&#328;uje tak&eacute; prov&aacute;d&#283;t n&#283;kter&eacute; akce, jako je <a href="../Std_ViewFitSelection.html" title="Std ViewFitSelection">Std ViewFitSelection</a> a odes&iacute;lat objekt do <a href="../Python_console.html" class="mw-redirect" title="Python console">Konzoly Pythonu</a>.
 </p><p><span id="Object_export"></span>
 </p>
 <h3><span class="mw-headline" id="Export_objektu">Export objektu</span></h3>
@@ -115,12 +115,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122204805
+Cached time: 20260122204839
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.075 seconds
-Real time usage: 0.159 seconds
+Real time usage: 0.157 seconds
 Preprocessor visited node count: 284/1000000
 Post&#8208;expand include size: 9861/2097152 bytes
 Template argument size: 2794/2097152 bytes
@@ -131,19 +131,19 @@ Unstrip post&#8208;expand size: 4592/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.497      1 -total
- 27.52%   11.143      1 Template:Userdocnavi/cs
- 12.87%    5.213      1 Template:Caption
- 12.62%    5.110      3 Template:Code
- 11.60%    4.697      1 Template:TOCright
- 11.26%    4.559      1 Template:Navigation_menu_2
-  9.19%    3.722      2 Template:Docnav
-  6.59%    2.671      3 Template:Incode
-  6.11%    2.476      1 Template:MenuCommand
-  6.01%    2.434      1 Template:Button
+100.00%   32.958      1 -total
+ 17.15%    5.651      1 Template:Userdocnavi/cs
+ 16.85%    5.553      3 Template:Incode
+ 14.62%    4.820      2 Template:Docnav
+ 11.68%    3.849      4 Template:KEY
+ 10.57%    3.482      3 Template:Code
+  8.64%    2.846      1 Template:TOCright
+  7.09%    2.337      1 Template:Navigation_menu_2
+  6.32%    2.083      1 Template:MenuCommand
+  5.33%    1.758      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122204805 and revision id 1742751. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122204838 and revision id 1742753. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
