--- a/wiki/cs/Selection_methods.html
+++ b/wiki/cs/Selection_methods.html
@@ -50,7 +50,7 @@
 </p><p><span id="Object_export"></span>
 </p>
 <h3><span class="mw-headline" id="Export_objektu">Export objektu</span></h3>
-<p><i>To by m&#283;lo b&yacute;t na str&aacute;nce <a href="../index.php?title=Zobrazen%C3%AD_v%C3%BDb%C4%9Bru&amp;action=edit&amp;redlink=1.html" class="new" title="Zobrazen&iacute; v&yacute;b&#283;ru (page does not exist)">zobrazen&iacute; v&yacute;b&#283;ru</a>.</i>
+<p><i>To by m&#283;lo b&yacute;t na str&aacute;nce <a href="../Selection_view.html" class="mw-redirect" title="Selection view">zobrazen&iacute; v&yacute;b&#283;ru</a>.</i>
 </p><p>Vyberte libovoln&yacute; komplexn&iacute; objekt, nap&#345;&iacute;klad <a href="../index.php?title=PartDesign_Body/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PartDesign Body/cs (page does not exist)">PartDesign Body</a> nebo <a href="../Std_Part.html" title="Std Part">Std Part</a>, pot&eacute; v <a href="../index.php?title=Selection_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection view/cs (page does not exist)">zobrazen&iacute; v&yacute;b&#283;ru</a> znovu vyberte objekt a stiskn&#283;te kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> + <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">C</span> na kl&aacute;vesnici, aby se otev&#345;elo dialogov&eacute; okno <b>V&yacute;b&#283;r objektu</b>. To umo&#382;&#328;uje kop&iacute;rovat vybran&yacute; objekt spole&#269;n&#283; se v&scaron;emi nebo pouze n&#283;kter&yacute;mi z&aacute;visl&yacute;mi objekty tohoto objektu. Nap&#345;&iacute;klad u <a href="../index.php?title=Std_Part/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Part/cs (page does not exist)">Std Part</a> lze vybrat nejen samotn&yacute; <a href="../index.php?title=Std_Part/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Part/cs (page does not exist)">Std Part</a>, ale tak&eacute; jeho po&#269;&aacute;tek, t&#345;i z&aacute;kladn&iacute; osy (XYZ) a t&#345;i z&aacute;kladn&iacute; roviny (XY, YZ, XZ).
 </p><p>Po stisknut&iacute; tla&#269;&iacute;tka <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> se vybran&eacute; objekty zkop&iacute;ruj&iacute; do pam&#283;ti a pot&eacute; je lze vlo&#382;it do dokumentu, aby se duplikovaly pouze tyto objekty.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=ObjectSelection.png&amp;filetimestamp=20200204032022&amp;.html" class="mw-file-description"><img src="../File/ObjectSelection.png" decoding="async" width="623" height="415" class="mw-file-element" data-file-width="623" data-file-height="415"></a></span> 
@@ -115,12 +115,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122204839
+Cached time: 20260122205001
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.157 seconds
+CPU time usage: 0.097 seconds
+Real time usage: 0.198 seconds
 Preprocessor visited node count: 284/1000000
 Post&#8208;expand include size: 9861/2097152 bytes
 Template argument size: 2794/2097152 bytes
@@ -131,19 +131,19 @@ Unstrip post&#8208;expand size: 4592/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.958      1 -total
- 17.15%    5.651      1 Template:Userdocnavi/cs
- 16.85%    5.553      3 Template:Incode
- 14.62%    4.820      2 Template:Docnav
- 11.68%    3.849      4 Template:KEY
- 10.57%    3.482      3 Template:Code
-  8.64%    2.846      1 Template:TOCright
-  7.09%    2.337      1 Template:Navigation_menu_2
-  6.32%    2.083      1 Template:MenuCommand
-  5.33%    1.758      1 Template:Caption
+100.00%   40.294      1 -total
+ 34.21%   13.784      1 Template:Userdocnavi/cs
+ 13.32%    5.368      2 Template:Docnav
+ 10.82%    4.360      1 Template:MenuCommand
+  9.51%    3.831      1 Template:Navigation_menu_2
+  9.19%    3.705      3 Template:Code
+  7.21%    2.906      1 Template:TOCright
+  5.74%    2.313      1 Template:Caption
+  5.41%    2.181      1 Template:Button
+  5.01%    2.020      3 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122204838 and revision id 1742753. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122205001 and revision id 1742755. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
