--- a/wiki/cs/Installing_additional_components.html
+++ b/wiki/cs/Installing_additional_components.html
@@ -35,7 +35,7 @@
 </p><p><span id="External_workbenches"></span>
 </p>
 <h1><span id="Extern.C3.AD_pracovn.C3.AD_prost.C5.99ed.C3.AD"></span><span class="mw-headline" id="Extern&iacute;_pracovn&iacute;_prost&#345;ed&iacute;">Extern&iacute; pracovn&iacute; prost&#345;ed&iacute;</span></h1>
-<p>Krom&#283; v&yacute;choz&iacute;ch <a href="../cs/Workbenches.html" title="Workbenches/cs">pracovn&iacute;ch ploch</a> dod&aacute;van&yacute;ch s FreeCADem existuje tak&eacute; velk&aacute; sb&iacute;rka u&#382;ite&#269;n&yacute;ch <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">extern&iacute;ch pracovn&iacute;ch ploch</a> vytvo&#345;en&yacute;ch &#269;leny komunity.
+<p>Krom&#283; v&yacute;choz&iacute;ch <a href="../cs/Workbenches.html" title="Workbenches/cs">pracovn&iacute;ch ploch</a> dod&aacute;van&yacute;ch s FreeCADem existuje tak&eacute; velk&aacute; sb&iacute;rka u&#382;ite&#269;n&yacute;ch <a href="../cs/External_workbenches.html" title="External workbenches/cs">extern&iacute;ch pracovn&iacute;ch ploch</a> vytvo&#345;en&yacute;ch &#269;leny komunity.
 </p><p><span id="Third_party_software"></span>
 </p>
 <h1><span id="Software_t.C5.99et.C3.ADch_stran"></span><span class="mw-headline" id="Software_t&#345;et&iacute;ch_stran">Software t&#345;et&iacute;ch stran</span></h1>
@@ -44,7 +44,7 @@
 </p>
 <h2><span class="mw-headline" id="Podpora">Podpora</span></h2>
 <h3><span class="mw-headline" id="GitPython">GitPython</span></h3>
-<p><a rel="nofollow" class="external text" href="https://github.com/gitpython-developers/GitPython">GitPython</a> je knihovna pro pr&aacute;ci s Git repozit&aacute;&#345;i. Tuto knihovnu m&#367;&#382;e pou&#382;&iacute;vat <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Spr&aacute;vce dopl&#328;k&#367;</a>. GitPython je sou&#269;&aacute;st&iacute; instala&#269;n&iacute;ch bal&iacute;&#269;k&#367; FreeCADu pro Windows a Mac.
+<p><a rel="nofollow" class="external text" href="https://github.com/gitpython-developers/GitPython">GitPython</a> je knihovna pro pr&aacute;ci s Git repozit&aacute;&#345;i. Tuto knihovnu m&#367;&#382;e pou&#382;&iacute;vat <a href="../Std_AddonMgr.html" title="Std AddonMgr">Spr&aacute;vce dopl&#328;k&#367;</a>. GitPython je sou&#269;&aacute;st&iacute; instala&#269;n&iacute;ch bal&iacute;&#269;k&#367; FreeCADu pro Windows a Mac.
 </p>
 <h3><span class="mw-headline" id="GraphViz">GraphViz</span></h3>
 <p><a rel="nofollow" class="external text" href="https://www.graphviz.org">GraphViz</a> is an open source graph visualization software. It is used by the <a href="../Std_DependencyGraph.html" title="Std DependencyGraph">Std DependencyGraph</a> tool.
@@ -117,7 +117,7 @@ CalculiX GraphiX, a GUI frontend. Only the solver is supported by FreeCAD. It is
 </p><p><span id="Related_pages"></span>
 </p>
 <h1><span id="Souvisej.C3.ADc.C3.AD_str.C3.A1nky"></span><span class="mw-headline" id="Souvisej&iacute;c&iacute;_str&aacute;nky">Souvisej&iacute;c&iacute; str&aacute;nky</span></h1>
-<ul><li><a href="../index.php?title=Import_Export/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Import Export/cs (page does not exist)">Import Export</a></li>
+<ul><li><a href="../cs/Import_Export.html" title="Import Export/cs">Import Export</a></li>
 <li><a href="../index.php?title=Import_Export_Preferences/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Import Export Preferences/cs (page does not exist)">P&#345;edvolby pro Import a Export</a></li>
 <li><a href="../index.php?title=Third_Party_Libraries/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Third Party Libraries/cs (page does not exist)">Knihovny t&#345;et&iacute;ch stran</a></li></ul>
 <p><br>
@@ -132,24 +132,24 @@ CalculiX GraphiX, a GUI frontend. Only the solver is supported by FreeCAD. It is
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=User_hub.png&amp;filetimestamp=20190221145008&amp;.html" class="mw-file-description"><img src="../File/User_hub.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../cs/User_hub.html" title="User hub/cs">User documentation</a>
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
-<li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a class="mw-selflink selflink">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/cs (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
+<li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a class="mw-selflink selflink">Additional components</a>, <a href="../cs/Compile_on_Docker.html" title="Compile on Docker/cs">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
+<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../cs/Interface.html" title="Interface/cs">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
-<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
+<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../cs/Testing.html" title="Testing/cs">Test Framework</a></li></ul>
 <hr>
-<ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
+<ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../cs/External_workbenches.html" title="External workbenches/cs">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
 <ul><li><b>Hubs:</b> <a href="../cs/User_hub.html" title="User hub/cs">User hub</a>, <a href="../cs/Power_users_hub.html" title="Power users hub/cs">Power users hub</a>, <a href="../cs/Developer_hub.html" title="Developer hub/cs">Developer hub</a></li></ul></div>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213913
+Cached time: 20260122210142
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.117 seconds
+CPU time usage: 0.070 seconds
+Real time usage: 0.165 seconds
 Preprocessor visited node count: 249/1000000
 Post&#8208;expand include size: 6617/2097152 bytes
 Template argument size: 2097/2097152 bytes
@@ -160,16 +160,16 @@ Unstrip post&#8208;expand size: 3821/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.755      1 -total
- 41.28%    4.440      1 Template:Userdocnavi/cs
- 26.03%    2.799      1 Template:VersionMinus
- 17.47%    1.879      1 Template:Navigation_menu_2
- 14.04%    1.510      1 Template:Docnav
-  7.34%    0.790      1 Template:TOCright
-  7.31%    0.786      1 Template:Version
+100.00%   23.253      1 -total
+ 38.23%    8.890      1 Template:Userdocnavi/cs
+ 26.42%    6.143      1 Template:TOCright
+ 17.42%    4.050      1 Template:Navigation_menu_2
+ 13.31%    3.096      1 Template:Version
+ 10.28%    2.390      1 Template:Docnav
+  8.70%    2.023      1 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26115-0!canonical and timestamp 20260111213913 and revision id 1732615. Rendering was triggered because: unknown
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26115-0!canonical and timestamp 20260122210142 and revision id 1742779. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
