--- a/wiki/cs/Installing_additional_components.html
+++ b/wiki/cs/Installing_additional_components.html
@@ -122,11 +122,11 @@ CalculiX GraphiX, a GUI frontend. Only the solver is supported by FreeCAD. It is
 <li><a href="../Third_Party_Libraries.html" title="Third Party Libraries">Knihovny t&#345;et&iacute;ch stran</a></li></ul>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
-<p>{{Docnav
-|<a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Instalace v syst&eacute;mu Mac</a>
-|<a href="../cs/Version_Migration.html" title="Version Migration/cs">Migrace verz&iacute;</a>
-</p>
+<div class="docnav">
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Instalace v syst&eacute;mu Mac</a></div>
+    <div><a href="../cs/Version_Migration.html" title="Version Migration/cs">Migrace verz&iacute;</a>
+ <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
+    <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=User_hub.png&amp;filetimestamp=20190221145008&amp;.html" class="mw-file-description"><img src="../File/User_hub.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../cs/User_hub.html" title="User hub/cs">User documentation</a>
@@ -144,15 +144,15 @@ CalculiX GraphiX, a GUI frontend. Only the solver is supported by FreeCAD. It is
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122210232
+Cached time: 20260122210327
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.061 seconds
-Real time usage: 0.103 seconds
-Preprocessor visited node count: 249/1000000
-Post&#8208;expand include size: 6617/2097152 bytes
-Template argument size: 2097/2097152 bytes
+CPU time usage: 0.089 seconds
+Real time usage: 0.192 seconds
+Preprocessor visited node count: 271/1000000
+Post&#8208;expand include size: 7319/2097152 bytes
+Template argument size: 2277/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -160,16 +160,16 @@ Unstrip post&#8208;expand size: 3821/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.199      1 -total
- 45.69%    6.031      1 Template:Userdocnavi/cs
- 17.72%    2.339      1 Template:Navigation_menu_2
- 14.39%    1.899      1 Template:Docnav
- 13.93%    1.838      1 Template:TOCright
- 11.88%    1.568      1 Template:Version
- 10.86%    1.433      1 Template:VersionMinus
+100.00%   23.263      1 -total
+ 55.33%   12.872      1 Template:Userdocnavi/cs
+ 20.09%    4.674      1 Template:Navigation_menu_2
+ 12.95%    3.013      2 Template:Docnav
+ 11.02%    2.563      1 Template:TOCright
+  9.08%    2.113      1 Template:Version
+  8.67%    2.016      1 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26115-0!canonical and timestamp 20260122210232 and revision id 1742783. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26115-0!canonical and timestamp 20260122210327 and revision id 1742785. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
